--- a/estilos/style.css
+++ b/estilos/style.css
@@ -1,22 +1,26 @@
 @charset "UTF-8";
+@import url('https://fonts.googleapis.com/css2?family=Wellfleet&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');
 
 *{
     padding: 0px;
     margin:0px;
-    box-sizing: border-box;
-    position: relative;
-    border: none;
 }
 
 body,html{
-    height: 100vh;
+    min-height: 100vh;
     width: 100vw;
 }
 
 body{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin: 0;
     background: #FDFED6;
     font-family: 'Inter', Arial, Helvetica, sans-serif;
-    overflow-x:hidden ;
+    overflow-x:hidden;
+    overflow-y: scroll;
 }
 
 #logo{
@@ -30,12 +34,15 @@ body{
     height: 154px;
 }
 
-#instagram{
-    display: flex;
-    justify-content: center;
+.menu{
     width: 100vw;
     height: 27px;
     background: #0F5E03;
+}
+
+#instagram{
+    display: flex;
+    justify-content: center;
 }
 
 #instagram > a{
@@ -48,7 +55,7 @@ body{
 
 }
 
-#instagram > a:hover{
+#instagram > #insta:hover{
     text-decoration: none;
     color: white;
     font-family: 'Inter', Arial, Helvetica, sans-serif;
@@ -59,7 +66,8 @@ body{
 }
 
 #logoinsta{
-    padding-bottom: 2px;
+    margin-top: -3px;
+    margin-right: 2px;
     width: 29.29px;
     height: 26px;
 }
@@ -79,8 +87,14 @@ button{
     width: 150px;
     height: 25px;
     border: 1px solid rgb(42, 237, 42);
-    border-radius: 5px;
+    border-radius: 10px;
     color: white;
+    cursor: pointer;
+}
+
+button:hover{
+    background-color: #038428;
+    transform: translate(-2px,-1px);
 }
 
 #seth1{
@@ -111,6 +125,7 @@ button{
 #imagem-bottom{
     display: flex;
     justify-content: center;
+    align-items: flex-end;
     gap: 90px;
     margin:30px 0px -15px 0px;
 }
@@ -118,12 +133,169 @@ button{
 #flash{
     width: 140.03px;
     height: 159.29px;
+    padding-top: 30px;
 }
 
 #joaofrango{
     width: 138.62px;
     height: 145.14px;
+}
+
+
+.menu2{
+    display: flex;
+    justify-content: space-around;
+    width: 100vw;
+    height: 27px;
+    background: #0F5E03;
+}
+
+.inicioeseries{
+    display: flex;
+}
+
+#inicio{
+    padding-left: 20px;
+    padding-top: 3px;
+    margin-right: 30px;
+}
+
+#inicio>a{
+    width: 59px;
+    height: 20px;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 16px;
+    text-decoration: none;
+    color: white;
+}
+
+#inicio>a:hover{
+    background-color: #08B438;
+}
+
+#series>a:hover{
+    background-color: #08B438;
+}
+
+#series{
+    padding-left: 20px;
+    padding-top: 3px;
+    margin-right: 30px;
+}
+
+#series>a{
+    width: 59px;
+    height: 20px;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 16px;
+    text-decoration: none;
+    color: white;
+}
+
+#filmes{
+    padding-left: 20px;
+    padding-top: 3px;
+    margin-right: 30px;
+}
+
+#filmes>a{
+    width: 59px;
+    height: 20px;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 16px;
+    text-decoration: none;
+    color: white;
+}
+
+#instagram2{
+    display: flex;
+    justify-content: flex-end;
+    padding-right: 20px;
+}
+
+#instagram2 > a{
+    text-decoration: none;
+    color: #FDFED6;
+    font-family: 'Inter', Arial, Helvetica, sans-serif;
+    font-weight: 700;
+    font-size: 16px;
+    padding-top: 3px;
     
+
+}
+
+#instagram2 > a:hover{
+    text-decoration: none;
+    color: white;
+    font-family: 'Inter', Arial, Helvetica, sans-serif;
+    font-weight: 700;
+    font-size: 16px;
+    
+    transform: translate(-2px, -1px);
+}
+
+#firstimg{
+    padding-top: 13px;
+}
+
+.imagens >img{
+    width: 390px;
+    height: 390px;
+    
+}
+
+.numeros>ul{
+    display: flex;
+    justify-content: space-around;
+    text-decoration: none;
+    margin-bottom: 20px;
+}
+
+.numeros>ul>li{
+    display: flex;
+    justify-content: center;
+    width: 30px;
+    height: 23px;
+    font-family: 'Wellfleet';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    text-align: center;
+}
+
+.numeros a{
+    color: black;
+}
+
+.numeros li>a:hover{
+    background-color: #038428;
+    color: white;
+    width: 35px;
+    transform: translate(-2px,-1px);
+}
+
+#setaesq{
+    width: 29px;
+    height: 23px;
+}
+
+#setaesq:hover{
+    transform: translate(-2px,-1px);
+}
+
+#setadir:hover{
+    transform: translate(-2px,-1px);
+}
+
+#setadir{
+    width: 29px;
+    height: 23px;
 }
 
 footer{
@@ -136,4 +308,9 @@ footer{
     font-weight: 400;
     font-size: 16px;
     text-align: center;
+}
+
+footer a{
+    text-decoration: underline;
+    color: white;
 }
