--- a/estilos/style.css
+++ b/estilos/style.css
@@ -10,6 +10,7 @@
 body,html{
     min-height: 100vh;
     width: 100vw;
+    position: relative;
 }
 
 body{
@@ -124,10 +125,10 @@ button:hover{
 
 #imagem-bottom{
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     align-items: flex-end;
     gap: 90px;
-    margin:30px 0px -15px 0px;
+   
 }
 
 #flash{
@@ -247,14 +248,13 @@ button:hover{
 .imagens >img{
     width: 390px;
     height: 390px;
-    
 }
 
 .numeros>ul{
     display: flex;
     justify-content: space-around;
     text-decoration: none;
-    margin-bottom: 20px;
+    padding-bottom: 50px;
 }
 
 .numeros>ul>li{
@@ -265,11 +265,12 @@ button:hover{
     font-family: 'Wellfleet';
     font-style: normal;
     font-weight: 400;
-    font-size: 16px;
+    font-size: 20px;
     text-align: center;
 }
 
 .numeros a{
+    text-decoration: none;
     color: black;
 }
 
@@ -298,7 +299,7 @@ button:hover{
     height: 23px;
 }
 
-footer{
+footer {
     width: 100vw;
     height: 21px;
     background: #7C7C7C;
@@ -308,6 +309,8 @@ footer{
     font-weight: 400;
     font-size: 16px;
     text-align: center;
+    position: absolute;
+    bottom: 0;
 }
 
 footer a{
